# vulcan

./: .gitignore  README.md  main.py  pyproject.toml
src/: data.py  ml.py  timeseries.py  visual.py
tests/: test.ipynb
