[project]
name = "vulcan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ace-tools>=0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "treeinterpreter>=0.2.3",
    "xgboost>=3.0.2",
]
